--- a/package.json
+++ b/package.json
@@ -9,10 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.8",
-    "expo-status-bar": "~1.6.0",
+    "@firebase/auth": "^1.3.0",
+    "@firebase/firestore": "^4.1.3",
+    "@react-navigation/drawer": "^6.5.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.2",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.5.0",
+    "base-64": "^1.0.0",
+    "expo": "~48.0.18",
+    "expo-status-bar": "~1.4.4",
+    "firebase": "^10.3.1",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.71.8",
+    "react-native-collapsible": "^1.6.1",
+    "react-native-gesture-handler": "2.5.0",
+    "react-native-picker-select": "^8.1.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "^4.6.4",
+    "react-native-snap-carousel": "https://github.com/ram33z/react-native-snap-carousel",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
