--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@firebase/auth": "^1.3.0",
     "@firebase/firestore": "^4.1.3",
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-firebase/auth": "^18.4.0",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
@@ -30,8 +32,7 @@
     "react-native-safe-area-context": "^4.6.4",
     "react-native-snap-carousel": "https://github.com/ram33z/react-native-snap-carousel",
     "react-redux": "^8.1.2",
-    "redux": "^4.2.1",
-    "uuid": "^9.0.1"
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
